--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "AI-powered business partner discovery backend"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
+    "langchain-community>=0.4.1",
     "langchain-openai>=1.1.0",
     "pydantic-settings>=2.12.0",
 ]
