--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,4 +8,7 @@ dependencies = [
     "langchain-community>=0.4.1",
     "langchain-openai>=1.1.0",
     "pydantic-settings>=2.12.0",
+    "chromadb>=0.5.0",
+    "langchain-chroma>=1.0.0",
+    "langchain>=1.1.0",
 ]
