--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "chromadb>=0.5.0",
     "langchain-chroma>=1.0.0",
     "langchain>=1.1.0",
+    "langchain-pinecone>=0.2.0",
     "boto3==1.26.122",
     "botocore==1.29.122",
     "celery==5.3.1",
